@@ -1752,3 +1752,7 @@ Fixed: Console not throwing some specific exception errors when the exception oc
 Fixed: Function UNEXTRACT making server crash.
 Changed: Equipped items now will update timer using TIMERD (10x per sec) instead TIMER (1x per sec).
 [sphereCrypt.ini]: Added crypt key for classic client 7.0.84 and enhanced client 4.0.84
+
+24-02-2020, Coruja
+Added: Support for function MAPWAYPOINT on classic clients >= 7.0.84.0.
+	-NOTE: Enhanced clients support all waypoint types, but classic clients only support type 0 (remove) and 6 (healer)
